docs/api/qiskit/0.19/qiskit.transpiler.passes.Layout2qDistance.mdx
---
title: Layout2qDistance (v0.19)
description: API reference for qiskit.transpiler.passes.Layout2qDistance in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Layout2qDistance
---

# Layout2qDistance

<Class id="qiskit.transpiler.passes.Layout2qDistance" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/layout/layout_2q_distance.py" signature="Layout2qDistance(*args, **kwargs)" modifiers="class">
  Evaluate how good the layout selection was.

  Saves in property\_set\[‘layout\_score’] (or the property name in property\_name) the sum of distances for each circuit CX. The lower the number, the better the selection. Therefore, 0 is a perfect layout selection. No CX direction is considered.

  Layout2qDistance initializer.

  **Parameters**

  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – Directed graph represented a coupling map.
  *   **property\_name** (*str*) – The property name to save the score. Default: layout\_score

  ## Attributes

  <span id="layout2qdistance-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Layout2qDistance.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="layout2qdistance-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Layout2qDistance.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="layout2qdistance-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Layout2qDistance.name" signature="Layout2qDistance.name()">
    Return the name of the pass.
  </Function>

  <span id="layout2qdistance-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Layout2qDistance.run" signature="Layout2qDistance.run(dag)">
    Run the Layout2qDistance pass on dag. :param dag: DAG to evaluate. :type dag: DAGCircuit
  </Function>
</Class>

